[gd_scene load_steps=3 format=3 uid="uid://3lsf5y748cjw"]

[ext_resource type="Script" path="res://scenes/mainMenu/MainMenu.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://hqx06mg6uk58" path="res://scenes/OnlineLobby.tscn" id="4"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="MainButtonsMenu" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -101.0
offset_right = 70.0
grow_vertical = 0

[node name="Play" type="Button" parent="MainButtonsMenu"]
offset_right = 70.0
offset_bottom = 31.0
text = "Play"

[node name="Settings" type="Button" parent="MainButtonsMenu"]
offset_top = 35.0
offset_right = 70.0
offset_bottom = 66.0
text = "Settings"

[node name="Quit" type="Button" parent="MainButtonsMenu"]
offset_top = 70.0
offset_right = 70.0
offset_bottom = 101.0
text = "Quit"

[node name="PlayMenu" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
alignment = 1

[node name="Coop LAN" type="Button" parent="PlayMenu"]
text = "Coop LAN"

[node name="Perro Malo" type="Button" parent="PlayMenu"]
text = "Perro Malo"

[node name="Back" type="Button" parent="PlayMenu"]
text = "Back"

[node name="Menu LAN" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
alignment = 1

[node name="Host Button" type="Button" parent="Menu LAN"]
text = "Host"

[node name="Join Button" type="Button" parent="Menu LAN"]
text = "Join"

[node name="Back Button" type="Button" parent="Menu LAN"]
text = "Back"

[node name="MenuLan" parent="." instance=ExtResource("4")]
visible = false

[connection signal="pressed" from="MainButtonsMenu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MainButtonsMenu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MainButtonsMenu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="PlayMenu/Coop LAN" to="." method="_on_Coop_LAN_pressed"]
[connection signal="pressed" from="PlayMenu/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Menu LAN/Host Button" to="." method="_on_Host_Button_pressed"]
[connection signal="pressed" from="Menu LAN/Join Button" to="." method="_on_Join_Button_pressed"]
[connection signal="pressed" from="Menu LAN/Back Button" to="Menu LAN/Back Button" method="_on_Back_Button_pressed"]
